master - build testing

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'SQL Linting'
-description: 'Run SQLFluff to lint SQL files'
+name: 'Lintor'
+description: 'Run linting on chosen language according to Cloud Factory best practices'
 
 inputs:
   directory:
@@ -17,11 +17,13 @@ inputs:
 
   config:
     description: 'Path to SQLFluff configuration file'
-    required: false
+    required: true
+    default: 'config/.sqlfluff'
 
-outputs:
-  output:
-    description: 'Output from SQLFluff'
+  stop_on_fail:
+    description: 'Stop workflow on linting failure'
+    required: true
+    default: true
 
 runs:
   using: 'composite'
@@ -50,9 +52,13 @@ runs:
     - name: Lint SQL
       if: ${{ inputs.language == 'SQL' }}
       run: |
+        echo ${{ inputs.config }}
         echo "Linting SQL with dialect ${{ inputs.dialect || 'default' }}"
         pip install sqlfluff==3.0.1
-        sqlfluff lint ${{ inputs.directory }} --dialect ${{ inputs.dialect }} --config ${{ inputs.config }}
+        sqlfluff lint ${{ inputs.directory }} --dialect ${{ inputs.dialect }} --config ${{ inputs.config }} ||
+        if [ ${{ inputs.stop_on_fail }} == true ]; then
+          exit 1
+        fi
       shell: bash
 
     - name: Lint Python
@@ -60,5 +66,8 @@ runs:
       run: |
         echo "Linting Python"
         pip install flake8==7.0.0
-        python -m flake8 ${{ inputs.directory }}
+        python3 -m flake8 './app' ||
+        if [ ${{ inputs.stop_on_fail }} == true ]; then
+          exit 1
+        fi
       shell: bash
