master - testing build

--- a/action.yml
+++ b/action.yml
@@ -34,9 +34,7 @@ runs:
     - name: Checkout GitHub Action repository
       uses: actions/checkout@v4
       with:
-        repository: 'AlexanderJacquot/lintor-actions@v1.3'
-        ref: 'main'
-        path: 'action-repo'
+        repository: AlexanderJacquot/lintor-actions
 
     - name: Set up Python
       uses: actions/setup-python@v5
